# CosmiC

./: .gitignore  COPYING  LICENSE  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac  configure.scan  configure~  test.c
autom4te.cache/: output.0  output.1  output.2  output.4  output.5  requests  traces.1  traces.2  traces.3  traces.4  traces.5
common/: Makefile  Makefile.am  Makefile.in  error.c  errortext.h
cosmic-lexer/: Makefile  Makefile.am  Makefile.in  cosmic-lexer  main.c  scan.c  scan.h  tokenize.c  tokenize.h
include/: Makefile  Makefile.am  Makefile.in  cosmic-error.h  tokens.h
